--- a/src/app/pages/directory/empdashboard/empdashboard.html
+++ b/src/app/pages/directory/empdashboard/empdashboard.html
@@ -222,6 +222,92 @@
                     REPORTS: EMPLOYEE STATUS
                 </div>
                 <div class="panel-body">
+                    <ul class="report-info-list">
+                        <li>
+                            <a data-ui-sref="employees.reports.all" href="#/employees/reports/all">All Employees</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.registered" href="#/employees/reports/registeredemployees">Registered Employees</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.invitations" href="#/employees/reports/invitations">Invited Employees</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.pendingregistrations" href="#/employees/reports/pendingregistrations">Pending Registrations</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.uninvited" href="#/employees/reports/uninvitedemployees">Uninvited Employees</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.neverloggedin" href="#/employees/reports/neverloggedin">Never Logged in</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.employeetype" href="#/employees/reports/employeetype">Employee Work Type</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.roles" href="#/employees/reports/roles">Employee Roles</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.incomplete" href="#/employees/reports/incomplete">Incomplete Profiles</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.inprobation" href="#/employees/reports/inprobation">Employees In Probation</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.completedprobation" href="#/employees/reports/completedprobation">Probation Completed Employees</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.innoticeperiod" href="#/employees/reports/innoticeperiod">Employees In Notice Period</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.relieved" href="#/employees/reports/relieved">Relieved Employees</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.withoutreportingmanager" href="#/employees/reports/withoutreportingmanager">Without Reporting Manager</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.loginhistory" href="#/employees/reports/loginhistory">Login History</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.loginfailures" href="#/employees/reports/loginfailures">Login Failures</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.employeesmasterdata" href="#/employees/reports/allemployeesmasterdata">Employee Master Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.leaveplandetails" href="#/employees/reports/leaveplandetails">Employee Leave Plan Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.shiftdetails" href="#/employees/reports/shiftdetails">Employee Shift Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.weekoffdetails" href="#/employees/reports/weekoffdetails">Employee Weekly-off Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.trackingpolicydetails" href="#/employees/reports/trackingpolicydetails">Employee Attendance Tracking Policy Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.jobdetails" href="#/employees/reports/jobdetails">Employee Job Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.customfielddetails" href="#/employees/reports/customfielddetails">Custom Field Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.importlogs" href="#/employees/reports/importlogs">Import Logs</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.reportingmanager" href="#/employees/reports/reportingmanager">Reporting Managers Report</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.attrition" href="#/employees/reports/attrition">Attrition Employees Report</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.documents" href="#/employees/reports/documents">Employee Documents Report</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.logindisabled" href="#/employees/reports/logindisabled">Login Disabled Employees Report</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -231,6 +317,33 @@
                     Reports: Employee Demography
                 </div>
                 <div class="panel-body">
+                    <ul class="report-info-list">
+                        <li>
+                            <a data-ui-sref="employees.reports.familyinfo" href="#/employees/reports/familyinfo">Family Info</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.contactinfo" href="#/employees/reports/contactinfo">Contact Info</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.bloodgroupinfo" href="#/employees/reports/bloodgroupinfo">Blood Group Info</a>
+                        </li>
+
+                        <li>
+                            <a data-ui-sref="employees.reports.education" href="#/employees/reports/education">Education Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.experience" href="#/employees/reports/experience">Past Experience Details</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.birthdayreport" href="#/employees/reports/birthdayreport">Birthday Report</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.workanniversaryreport" href="#/employees/reports/workanniversaryreport">Work Anniversary Report</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.marriageanniversaryreport" href="#/employees/reports/marriageanniversaryreport">Marriage Anniversary Report</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -240,6 +353,32 @@
                     Reports: Employee Aggregates
                 </div>
                 <div class="panel-body">
+                    <ul class="report-info-list">
+                        <li>
+                            <a data-ui-sref="employees.reports.jobtitles" href="#/employees/reports/jobtitles">Job Titles</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.departments" href="#/employees/reports/departments">Departments</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.leaveplans" href="#/employees/reports/leaveplans">Leave Plans</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.orglocations" href="#/employees/reports/orglocations">Org Locations</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.weekoffs" href="#/employees/reports/weekoffs">Weekly-offs</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.trackingpolicies" href="#/employees/reports/trackingpolicies">Attendance Tracking Policies</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.shifts" href="#/employees/reports/shifts">Shifts</a>
+                        </li>
+                        <li>
+                            <a data-ui-sref="employees.reports.expensepolicies" href="#/employees/reports/expensepolicies">Expense Policies</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
