--- a/src/app/pages/team/profileapproval/profileapproval.html
+++ b/src/app/pages/team/profileapproval/profileapproval.html
@@ -1,7 +1,1 @@
-<div class="col-lg-12">
-    <div class="panel">
-        <div class="panel-body">
-            <h1>Profile Approval</h1>
-        </div>
-    </div>
-</div>
+<child-nav menu="'team.profileapproval'"></child-nav> 
