--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -524,8 +524,103 @@ td {
   font-size: 14px;
   margin-top: 30px;
 }
-.alert-success {
-  background-color: #dff0d8;
-  border-color: #d6e9c6;
- 
+.report-info-list {
+  padding: 0;
+  margin-top: 15px;
+  margin-left: 20px;
 }
+.report-info-list li {
+  margin-bottom: 10px;
+  position: relative;
+  list-style-type: decimal;
+  color: #409ce7;
+}
+.report-info-list li a {
+  color: #409ce7!important;
+}
+
+
+//my team leave page css
+
+//  .pending-leave {
+//   padding-top: 5px;
+// }
+// .internal-padding {
+//   padding-left: 10px;
+// }
+// .profile-picture-container {
+//   width: 30px;
+//   height: 30px;
+//   margin-bottom: 0;
+//   margin-right: 0;
+//   background-color: transparent!important;
+// }
+// .profile-picture {
+//   width: 30px;
+//   height: 30px;
+// }
+// .img-initials {
+//   font-size: 14px;
+//   padding: 6px 4px;
+//   padding-top: 5px;
+// }
+// .leave-details {
+//   margin-bottom: 3px;
+//   padding-left: 10px;
+// }
+// .leave-requestor {
+//   margin-bottom: 2px;
+// }
+// .leave-details .aDisplayName {
+//   color: #000;
+// }
+// .request-calender {
+//   height: 70px;
+//   width: 82px;
+//   float: right;
+// }
+
+// .clear-side-padding {
+//   padding-left: 0;
+//   padding-right: 0;
+// }
+// .request-calender .month-view {
+//   height: 25px;
+//   background-color: #e64040;
+//   display: inline-block;
+//   width: 100%;
+//   border-top-left-radius: 8px;
+//   border-top-right-radius: 8px;
+//   border: 1px solid #e64040;
+//   color: #fff;
+// }
+
+// .month-view span {
+//   display: block;
+//   text-align: center;
+//   font-size: 11px;
+//   text-transform: uppercase;
+//   position: relative;
+//   top: 1px;
+// }
+// .request-calender .month-view .dot {
+//   display: inline;
+//   top: -3px;
+//   font-size: 13px;
+// }
+// .request-calender .date-view {
+//   background-color: #fff;
+//   display: inline-block;
+//   height: 50px;
+//   width: 100%;
+//   margin-top: -5px;
+//   border: 1px solid #e7e6e6;
+//   border-top: none;
+//   border-bottom-left-radius: 8px;
+//   border-bottom-right-radius: 8px;
+//   padding: 0 1px 0 2px;
+// }
+// .request-calender .date-view .date-text .day {
+//   font-size: 20px;
+//   color: #4f4f4f;
+// }
