--- a/src/app/pages/self/selfreport/selfreport.html
+++ b/src/app/pages/self/selfreport/selfreport.html
@@ -102,9 +102,12 @@
     <div class="col-lg-4 col-md-12 col-sm-12" ba-panel ba-panel-title="Payroll" ba-panel-class="medium-panel traffic-panel">
         <div class="col-sm-12 link-item clear-side-padding">
             <div class="col-sm-12">
-                <a class="anchor-sm" data-ui-sref="selfdir.selfreport.salaryslip">
+                <a class="anchor-sm" data-ui-sref="payroll.reports.paySlips">
                     Pay Slip
                 </a>
+                <!-- <a class="anchor-sm" data-ui-sref="selfdir.selfreport.salaryslip">
+                    Pay Slip
+                </a> -->
             </div>
         </div>
         <div class="col-sm-12 link-item clear-side-padding">
