--- a/src/app/pages/configuration/company/legal/edit-signatory.html
+++ b/src/app/pages/configuration/company/legal/edit-signatory.html
@@ -1,19 +1,21 @@
-<div class="modal-content">
+<div class="modal-content" ng-controller="signatureController">
     <div class="modal-header bg-primary">
-        <h3 class="inline-block clear-vertical-margin" data-ng-if="!ctrl.edit">Add Signatory</h3>
-        <h3 class="inline-block clear-vertical-margin" data-ng-if="ctrl.edit">Edit Signatory</h3>
+        <!-- <h3 class="inline-block clear-vertical-margin" data-ng-if="!edit">Add Signatory</h3>
+        <h3 class="inline-block clear-vertical-margin" data-ng-if="edit">Edit Signatory</h3> -->
     </div>
 
     <div class="modal-body content-container">
         <div class="row add-signatory-container">
-            <form name="addSignatoryForm" id="addSignatoryForm" data-ng-init="ctrl.form = this;" novalidate>
+            <!-- <form name="addSignatoryForm" id="addSignatoryForm" data-ng-init="form = this;" novalidate> -->
+            <form name="addSignatoryForm" id="addSignatoryForm" novalidate>
+
                 <div class="col-sm-12 vertical-margin">
                     <fieldset>
-                        <div class="col-sm-12 new-person-details" data-ng-class="{'clear-top' : 'ctrl.edit'}">
+                        <div class="col-sm-12 new-person-details" data-ng-class="{'clear-top' : 'edit'}">
                             <div class="col-sm-4 clear-left-padding">
                                 <div class="form-group">
                                     <label>Signatory Name</label>
-                                    <input type="text" class="form-control" data-ng-model="ctrl.model.name" name="signatoryName" id="signatoryName" required
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatureName" name="signatoryName" id="signatoryName" required
                                     />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryName" data-required-error="Name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -22,7 +24,7 @@
                             <div class="col-sm-4 clear-side-padding">
                                 <div class="form-group">
                                     <label>Signatory Father Name</label>
-                                    <input type="text" class="form-control" data-ng-model="ctrl.model.fatherName" name="signatoryFather" id="signatoryFather"
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatoryFathersName" name="signatoryFather" id="signatoryFather"
                                         required />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryFather" data-required-error="Father name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -31,7 +33,7 @@
                             <div class="col-sm-4 clear-right-padding">
                                 <div class="form-group">
                                     <label>Signatory Designation</label>
-                                    <input type="text" class="form-control" data-ng-model="ctrl.model.designation" name="signatoryDesignation" id="signatoryDesignation"
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDDesgId" name="signatoryDesignation" id="signatoryDesignation"
                                         required />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryDesignation" data-required-error="Designation is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
@@ -42,19 +44,19 @@
                                 <div class="col-sm-7">
                                     <div class="form-group clear-bottom">
                                         <label>Address</label>
-                                        <input type="text" class="form-control" data-ng-model="ctrl.model.address.addressLine1" />
-                                        <input type="text" class="form-control vertical-margin" data-ng-model="ctrl.model.address.addressLine2" />
+                                        <input type="text" class="form-control" data-ng-model="entity.ASDStreet" />
+                                        <input type="text" class="form-control vertical-margin" />
                                     </div>
                                 </div>
                                 <div class="col-sm-7 form-group">
                                     <div class="col-sm-4 clear-left-padding">
-                                        <input type="text" class="form-control" placeholder="City" data-ng-model="ctrl.model.address.city" />
+                                        <input type="text" class="form-control" placeholder="City" data-ng-model="entity.ASDCityId" />
                                     </div>
                                     <div class="col-sm-4 clear-side-padding">
-                                        <input type="text" class="form-control" placeholder="State" data-ng-model="ctrl.model.address.state" />
+                                        <input type="text" class="form-control" placeholder="State" />
                                     </div>
                                     <div class="col-sm-4 clear-right-padding">
-                                        <input type="text" class="form-control" placeholder="Pincode" data-ng-model="ctrl.model.address.zip" />
+                                        <input type="text" class="form-control" placeholder="Pincode" data-ng-model="entity.ASDPinCode" />
                                     </div>
                                 </div>
                             </div>
@@ -64,7 +66,7 @@
                                     <div class="col-sm-7 clear-side-padding">
                                         <div class="form-group clear-bottom">
                                             <label>Email</label>
-                                            <input class="form-control" data-ng-model="ctrl.model.email" name="signatoryEmail" id="signatoryEmail" required data-ng-model-options="ctrl.modelOptions"
+                                            <input class="form-control" data-ng-model="model.email" name="signatoryEmail" id="signatoryEmail" required data-ng-model-options="modelOptions"
                                                 data-ng-pattern="/^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,20}(?:\.[a-z]{2})?)$/"
                                             />
                                             <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryEmail" data-required-error="Email is required"
@@ -74,7 +76,7 @@
                                     <div class="col-sm-5 clear-right-padding">
                                         <div class="form-group clear-bottom">
                                             <label>PAN Card Number</label>
-                                            <input type="text" class="form-control upper-case" data-ng-model="ctrl.model.panNumber" name="signatoryPan" id="signatoryPan"
+                                            <input type="text" class="form-control upper-case" data-ng-model="model.panNumber" name="signatoryPan" id="signatoryPan"
                                                 required />
                                             <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryPan" data-required-error="Pan is required"
                                                 data-form-submit="addSignatoryForm.$submitted"></span>
@@ -88,8 +90,8 @@
                 <div class="row">
                     <div class="col-sm-12 vertical-margin">
                         <div class="col-sm-6 pull-right text-right">
-                            <button type="submit" data-ng-if="!ctrl.edit" class="btn btn-submit btn-primary" data-ng-click="ctrl.saveSignatory();">Add Signatory</button>
-                            <button type="submit" data-ng-if="ctrl.edit" class="btn btn-submit" data-ng-click="ctrl.updateSignatory();">Update Signatory</button>
+                            <button type="submit" data-ng-if="!edit" class="btn btn-submit btn-primary" ng-click="saveSignatory();">Add Signatory</button>
+                            <button type="submit" data-ng-if="edit" class="btn btn-submit" data-ng-click="updateSignatory();">Update Signatory</button>
                             <a class="btn btn-cancel" data-ng-click="$dismiss();">Cancel</a>
                         </div>
                     </div>
